--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CodeChella Festival</title>
+    <link rel="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <img class="navigation__codechella" src="assets/logo_codechella.png" alt="CodeChella Logo">
+            <div class="header__navigation__options">
+                <a href="" class="navigation__options__link">A experiência</a>
+                <a href="" class="navigation__options__link">Mapa de Setores</a>
+                <a href="" class="navigation__options__link">Informações</a>
+                <a href="" class="navigation__options__link">Ingresso</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <h1 class="title">A Experiência</h1>
+        <section class="description">
+            <div class="description__block">
+                <img class="description__block__img" src="assets/description_block01.jfif" alt="acessibilidade e inclusão foto">
+                <div class="description__block__text">
+                    <h6 class="description__block__text__title" >Acessibilidade e Inclusão</h6>
+                    <p class="description_block__text__paragraph">Nosso evento tenta abraçar um público mais amplo em todos os sentidos, de todas as idades, corpos, gostos e pensamentos!
+                         Isso está presente no  espaço físico, na sinalização, no treinamento da equipe de apoio, na comunicação em libras, braile, visual e tátil. 
+                         Além disso, dispomos de ingressos gratuitos para pessoas com deficiência e acompanhantes, pessoas idosas e crianças!</p>
+                </div>
+            </div>
+            <div class="description__block">
+                <img class="description__block__img" src="assets/description_block02.jfif" alt="Sustentabilidade Foto">
+                <div class="description__block__text">
+                    <h6 class="description__block__text__title">Sustentabilidade</h6>
+                    <p class="description__block__text__paragraph">Queremos estar aqui celebrando daqui a 50, 100 anos! 
+                        Por isso, levamos o futuro do nosso planeta a sério. 
+                        Nosso festival é carbono zero, com utilização de copos retornáveis, coleta e destinação adequada de resíduos, e transporte coletivo.</p>
+                </div>
+            </div>
+            <div class="description__block">
+                <img class="description__block__img" src="assets/description_block03.jfif" alt="Atracoes Foto">
+                <div class="description__block__text">
+                    <h6 class="description__block__text__title">Atrações</h6>
+                    <p class="description__block__text__paragraph">Intervenções artísticas e culturais para todos os gostos! Durante os intervalos dos shows,
+                         nossa experiência contará com recreação para crianças, oficina de cerâmica, origami, circo e aquarela! Além disso, nosso espaço contra com 3 praças de alimentação, 
+                         roda gigante e outros brinquedos!</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="social">
+        <img class="social__codechella" src="assets/logo_codechella.png" alt="CodeChella Logo">
+            <div class="social__media">
+                <p class="social__media__invite">Acesse nossas redes:</p>
+                <a class="social__media__link" href=""><img class="social__media__link__logo" src="assets/wat_logo.png" alt="whatsapp logo"></a>
+                <a class="social__media__link" href=""><img class="social__media__link__logo" src="assets/twitch_logo.png" alt="twitch logo"></a>
+                <a class="social__media__link" href=""><img class="social__media__link__logo" src="assets/twitter_logo.png" alt="twitter logo"></a>
+                <a class="social__media__link" href=""><img class="social__media__link__logo" src="assets/insta_logo.png" alt="insta logo"></a>
+            </div>
+            <p class="social__text">Desenvolvido por Alura.
+                Projeto fictício sem fins comerciais.</p>
+        </div>
+    </footer>
 </body>
 </html>
