--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>CodeChella Festival</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <a class="navigation__codechella" href=""><img class="navigation__codechella__logo" src="assets/logo_codechella.png" alt="CodeChella Logo"></a>
+            <div class="header__navigation__options">
+                <a href="" class="navigation__options__link">A experiência</a>
+                <a href="" class="navigation__options__link">Mapa de Setores</a>
+                <a href="" class="navigation__options__link">Informações</a>
+                <a href="" class="navigation__options__link">Ingresso</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <h1 class="title__index">Boas-vindas ao</h1>
+        <h1 class="hashtag__index"></h1>
+    </main>
 </body>
 </html>
