--- a/experience.html
+++ b/experience.html
@@ -20,31 +20,31 @@
         </nav>
     </header>
     <main>
-        <h1 class="title">A Experiência</h1>
-        <section class="description">
-            <div class="description__block">
-                <img class="description__block__img" src="assets/description_block01.jfif" alt="acessibilidade e inclusão foto">
-                <div class="description__block__text">
-                    <h6 class="description__block__text__title" >Acessibilidade e Inclusão</h6>
-                    <p class="description_block__text__paragraph">Nosso evento tenta abraçar um público mais amplo em todos os sentidos, de todas as idades, corpos, gostos e pensamentos!
+        <h1 class="title__exp">A Experiência</h1>
+        <section class="experience">
+            <div class="experience__block">
+                <img class="experience__block__img" src="assets/experience_block01.jfif" alt="acessibilidade e inclusão foto">
+                <div class="experience__block__text">
+                    <h6 class="experience__block__text__title" >Acessibilidade e Inclusão</h6>
+                    <p class="experience_block__text__paragraph">Nosso evento tenta abraçar um público mais amplo em todos os sentidos, de todas as idades, corpos, gostos e pensamentos!
                          Isso está presente no  espaço físico, na sinalização, no treinamento da equipe de apoio, na comunicação em libras, braile, visual e tátil. 
                          Além disso, dispomos de ingressos gratuitos para pessoas com deficiência e acompanhantes, pessoas idosas e crianças!</p>
                 </div>
             </div>
-            <div class="description__block">
-                <img class="description__block__img" src="assets/description_block02.jfif" alt="Sustentabilidade Foto">
-                <div class="description__block__text">
-                    <h6 class="description__block__text__title">Sustentabilidade</h6>
-                    <p class="description__block__text__paragraph">Queremos estar aqui celebrando daqui a 50, 100 anos! 
+            <div class="experience__block">
+                <img class="experience__block__img" src="assets/experience_block02.jfif" alt="Sustentabilidade Foto">
+                <div class="experience__block__text">
+                    <h6 class="experience__block__text__title">Sustentabilidade</h6>
+                    <p class="experience__block__text__paragraph">Queremos estar aqui celebrando daqui a 50, 100 anos! 
                         Por isso, levamos o futuro do nosso planeta a sério. 
                         Nosso festival é carbono zero, com utilização de copos retornáveis, coleta e destinação adequada de resíduos, e transporte coletivo.</p>
                 </div>
             </div>
-            <div class="description__block">
-                <img class="description__block__img" src="assets/description_block03.jfif" alt="Atracoes Foto">
-                <div class="description__block__text">
-                    <h6 class="description__block__text__title">Atrações</h6>
-                    <p class="description__block__text__paragraph">Intervenções artísticas e culturais para todos os gostos! Durante os intervalos dos shows,
+            <div class="experience__block">
+                <img class="experience__block__img" src="assets/experience_block03.jfif" alt="Atracoes Foto">
+                <div class="experience__block__text">
+                    <h6 class="experience__block__text__title">Atrações</h6>
+                    <p class="experience__block__text__paragraph">Intervenções artísticas e culturais para todos os gostos! Durante os intervalos dos shows,
                          nossa experiência contará com recreação para crianças, oficina de cerâmica, origami, circo e aquarela! Além disso, nosso espaço contra com 3 praças de alimentação, 
                          roda gigante e outros brinquedos!</p>
                 </div>
