--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <img class="navigation__codechella" src="assets/logo_codechella.png" alt="CodeChella Logo">
+            <a class="navigation__codechella" href=""><img class="navigation__codechella__logo" src="assets/logo_codechella.png" alt="CodeChella Logo"></a>
             <div class="header__navigation__options">
                 <a href="" class="navigation__options__link">A experiência</a>
                 <a href="" class="navigation__options__link">Mapa de Setores</a>
