--- a/index.html
+++ b/index.html
@@ -19,8 +19,25 @@
         </nav>
     </header>
     <main>
-        <h1 class="title__index">Boas-vindas ao</h1>
-        <h1 class="hashtag__index"></h1>
+        <section class="banner">
+            <h1 class="banner__title">Boas-vindas ao</h1>
+            <h1 class="banner__hashtag">#CodeChella2023!</h1>
+        </section>
+
+        <section class="about">
+            <img class="about__img" src="" alt="imagem sobre CodeChella">
+            <div class="about__description">
+                <h6 class="about__description__title">< 11 e 12 de Março >
+                    Aluródromo de São Paulo</h6>
+                <p>Hora de programar nossa memória com novas lembranças! 
+                Uma nova experiência sobre música, linguagens e, claro, tecnologia! 
+                Somos um festival diverso, com vários artistas e referências. Divirta-se!</p>
+                <div class="about__description__ticket" >
+                    <p class="about__description__ticket__text" >Comprar ingresso!</p>
+                    <p class="about__description__ticket__icon">local_activity</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
